...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Siz-z5-ds6">
                                <rect key="frame" x="85.5" y="166" width="243" height="60"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g4p-L0-coV" userLabel="Replicate Remote">
                                        <rect key="frame" x="0.0" y="0.0" width="243" height="30"/>
                                        <state key="normal" title="Update all data from remote source">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="replicateRemoteDataButtonTapped:" destination="rAO-6M-dNk" eventType="touchUpInside" id="th7-C2-HaJ"/>
                                        </connections>
                                    </button>
...
                        <connections>
                            <outlet property="dataSource" destination="d6L-0F-BpN" id="XgW-kN-8wj"/>
                            <outlet property="delegate" destination="d6L-0F-BpN" id="wHh-ua-BQo"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Upcoming events (0)" id="vf6-Yl-QwP">
                        <barButtonItem key="leftBarButtonItem" title="Home" id="acL-7J-ajt">
                            <connections>
                                <segue destination="rAO-6M-dNk" kind="show" identifier="showBatchActionsSegue" id="guc-i5-mwV"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="EX0-Hv-SVt">
                            <connections>
...
                                        <rect key="frame" x="113" y="465" width="188" height="242"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                    </imageView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y4s-6n-89m">
                                        <rect key="frame" x="168" y="348" width="78" height="30"/>
                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                        <state key="normal" title="Clear fields">
                                            <color key="titleColor" systemColor="labelColor"/>
                                        </state>
                                        <connections>
                                            <action selector="clearButtonTapped:" destination="e6d-Yc-lf0" eventType="touchUpInside" id="teZ-fX-aR3"/>
                                        </connections>
                                    </button>
...
