...

        if segmentController.selectedSegmentIndex == 0 {
            actorsTableView.isHidden = true
            scrollViewContainer.isHidden = false

            if selectedEventItem != nil {
                self.title = "Edit movie"
            } else {
                self.title = "Add movie"
            }
        }

        if segmentController.selectedSegmentIndex == 1 {
...
